2009-10-06  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.0.beta4.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-10-06  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-libraries 3.0.0-beta3 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.0.0.beta3.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-10-06  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/store.c, nasl/nasl_scanner_glue.c: Replaced openvasd by
	openvassd in documentation, minor cosmetics.

2009-10-06  Michael Wiegand <michael.wiegand@intevation.de>

	* Makefile: Expose $localstatedir and $sysconfdir set during configure
	time to CMake.

2009-10-06  Michael Wiegand <michael.wiegand@intevation.de>

	* misc/proctitle.c (setproctitle): Changed start of proctitle to match
	the new openvas-scanner binary name.

2009-10-05  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* include/libopenvas.h: Emptied, except for documentation.

	* Makefile: Do not install libopenvas.h anymore.

2009-10-05  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* include/libopenvas.h: Removed not needed function declarations and
	includes.

	* MANIFEST: Updated.

2009-10-05  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* includes/nvt_categories.h: New file, contains categories previously
	declared in libopenvas.h and a todo.

	* Makefile: Install nvt_categories.h

	* include/libopenvas.h: Removed definitions now contained in
	nvti_categories (ACT_*) and in openvas-scanner/pluginscheduler.h
	(LAUNCH_*).

	* nasl/nasl_init.c: Include nvt_categories instead of libopenvas.

2009-10-03  Matthew Mundell <matthew.mundell@intevation.de>

	* omp.c (omp_get_preferences_503): New function.
	* omp.h (omp_get_preferences_503): New header.

2009-09-30  Matthew Mundell <matthew.mundell@intevation.de>

	* nasl/openvas_logging.c (openvas_log_func): Pass the correct variable to
	dirname.
